--- a/code_tree_plugin/build.gradle
+++ b/code_tree_plugin/build.gradle
@@ -18,6 +18,7 @@ dependencies {
 
 intellij {
     version '2018.3.5'
+	alternativeIdePath '/opt/android-studio'
     intellij.updateSinceUntilBuild false
 }
 patchPluginXml {
